# invest-manager

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
invest/: cli_utils.py  config.py  main.py
invest/data/: cache.py  fetcher.py
invest/data/sources/: coingecko_source.py  fred_source.py  yfinance_source.py
invest/db/: engine.py  models.py
invest/detection/: models.py  zscore.py
invest/portfolio/: calculator.py  manager.py  schemas.py
