[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invest-manager"
version = "0.1.0"
description = "Personal CLI investment manager with anomaly detection and AI insights"
requires-python = ">=3.11"
dependencies = [
    # Core
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "pycoingecko>=3.1",
    "fredapi>=0.5",
    "httpx>=0.27",
    "tenacity>=8.2",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    # AI
    "openai>=1.30",
    "anthropic>=0.28",
    # TUI
    "textual>=0.59",
    "textual-dev>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
invest = "invest.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["invest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
